fix spacing

--- a/style.css
+++ b/style.css
@@ -295,9 +295,14 @@ html {
   }
 
   .underline {
-    text-decoration: underline var(--color-n5) !important;
-    text-decoration-thickness: 1px !important;
-    text-underline-offset: 6px !important;
+    /* text-decoration: underline var(--color-n5) !important; */
+    text-decoration: none !important;
+    /* text-decoration-thickness: 1px !important;
+    text-underline-offset: 6px !important; */
+    border-bottom: 1px solid var(--color-n5);
+    line-height: 1.4; 
+    padding-bottom: 0px;
+    display: inline-block;
   }
 }
 
